--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.timeline": "1.7.7",
+    "com.unity.ugui": "1.0.0",
+    "horatiu665.toybox": "https://github.com/horatiu665/toybox.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
