--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.render-pipelines.universal": "14.0.12",
     "com.unity.timeline": "1.7.7",
     "com.unity.ugui": "1.0.0",
     "horatiu665.toybox": "https://github.com/horatiu665/toybox.git",
